fix warning about overflow-X/Y

--- a/src/utilities/css/ContextMenu.css
+++ b/src/utilities/css/ContextMenu.css
@@ -289,8 +289,8 @@ select, input, textarea {
   }
 
   .ciview-dlg-content{ 
-        overflow-X:hidden;
-        overflow-Y:auto;
+        overflow-x:hidden;
+        overflow-y:auto;
         flex:1 1 auto;
         padding:5px;
   }
